[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prince-pdf"
version = "17.0.0.dev2026063001"
description = "Prince: convert HTML with CSS to PDF. Bundles the Prince engine - no separate install required."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT AND LicenseRef-Prince-License-Agreement"
license-files = ["LICENSE", "LICENSE-Prince.txt"]
authors = [{ name = "YesLogic Pty Ltd" }]
keywords = ["pdf", "html", "css", "markdown", "prince", "princexml", "typesetting", "paged media", "html to pdf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Printing",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Homepage = "https://www.princexml.com/"
"Prince Manual" = "https://www.princexml.com/doc/"
Repository = "https://github.com/yeslogic/prince-python"
"Bug Tracker" = "https://github.com/yeslogic/prince-python/issues"

[project.scripts]
prince = "prince_pdf._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prince_pdf"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hook.py"
